--- a/style.css
+++ b/style.css
@@ -87,8 +87,14 @@ div#jerboa_cell_example {
 }
 
 div#jerboa_board .jerboa {
-    background:#bb99cc;
     position:absolute;
+    transform-origin:center;
+    transition: top 0.3s ease, left 0.3s ease;
+}
+
+div#jerboa_board .jerboa img {
+    width:100%;
+    height:100%;
 }
 
 div#jerboa_board .jerboa:hover {
